# python-template

./: .gitignore  README.md  pyproject.toml  tox.ini
python_template/: __main__.py
